--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -6,7 +6,7 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  background: #181818;
+  background:  linear-gradient(80deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -40,7 +40,7 @@ h1 {
 .canvas-container {
     width: 90vw; /* Increase to 90% of the viewport width */
     height: 90vh; /* Increase to 90% of the viewport height */
-    background-color: #fff;
+    background-color: #a20000;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     overflow: hidden;
@@ -91,12 +91,24 @@ canvas:active {
 
 .transcript-output,
 .reply-output {
-  width: 90%; /* Adjust as necessary */
+  border-radius: 10px;
+  width: 60%; /* Adjust as necessary */
   margin-bottom: 1em; /* Adds space below the text areas */
+  background-color: rgba(255, 255, 255, 0.8); /* Make it 50% transparent */
+  border-color: transparent;
 }
 
+
 .button-container {
+  padding: 10px 20px;
   display: flex;
   justify-content: center; /* Center buttons horizontally */
   gap: 1em; /* Adds space between buttons */
+}
+
+.button-container button {
+  border-radius: 15px;
+  border-color: transparent;
+  font-size: 1.0em; /* Enlarge the button text */
+  padding: 15px 20px; /* Increase padding for larger button */
 }
